fix zero day issue
